--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
@@ -36,7 +36,7 @@
                     HeightRequest="65"
                     HorizontalOptions="Center"
                     Source="resource://MSO.StimmApp.Resources.Icons.plus_circle.svg"
-                    TintColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppPrimaryColor}"
+                    TintColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PrimaryColor}"
                     VerticalOptions="Center"
                     WidthRequest="65">
 
@@ -47,7 +47,7 @@
             </Grid>
             <Grid
                 Grid.Row="2"
-                BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=PopupColorColor}"
+                BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PopupColor}"
                 IsVisible="{Binding IsAddingAttachment}">
                 <attachments:AddAttachmentView />
             </Grid>
