--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorHeader.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorHeader.xaml
@@ -7,6 +7,7 @@
         <StackLayout>
             <Entry
                 HorizontalTextAlignment="Center"
+                IsEnabled="{Binding IsEditable}"
                 Opacity="0.7"
                 Text="{Binding AppStimmer.Title}"
                 TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.SubtitleTextColor}" />
