--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
@@ -32,7 +32,7 @@
                 IsVisible="true"
                 VerticalOptions="End">
                 <elements:TintedSvgCachedImage
-                    Margin="0,0,50,50"
+                    Margin="0,0,50,50" IsVisible="{Binding IsEditable}"
                     HeightRequest="65"
                     HorizontalOptions="Center"
                     Source="resource://MSO.StimmApp.Resources.Icons.plus_circle.svg"
@@ -45,7 +45,7 @@
                     </forms:SvgCachedImage.GestureRecognizers>
                 </elements:TintedSvgCachedImage>
             </Grid>
-            <Grid
+            <Grid 
                 Grid.Row="2"
                 BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PopupColor}"
                 IsVisible="{Binding IsAddingAttachment}">
