--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
@@ -8,7 +8,8 @@
     xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
     xmlns:forms="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
-    xmlns:transformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations">
+    xmlns:transformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+    xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView">
     <ContentView.Content>
         <Grid>
             <Grid.RowDefinitions>
@@ -45,12 +46,14 @@
                     </forms:SvgCachedImage.GestureRecognizers>
                 </elements:TintedSvgCachedImage>
             </Grid>
-            <Grid 
+            <xfShapeView:ShapeView Margin="15,0,15,0"
                 Grid.Row="2"
                 BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PopupColor}"
-                IsVisible="{Binding IsAddingAttachment}">
-                <attachments:AddAttachmentView />
-            </Grid>
+                IsVisible="{Binding IsAddingAttachment}" BorderColor="LightGray" BorderWidth="2">
+                <xfShapeView:ShapeView.Content>
+                    <attachments:AddAttachmentView />
+                </xfShapeView:ShapeView.Content>
+            </xfShapeView:ShapeView>
         </Grid>
     </ContentView.Content>
 </ContentView>
