--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
@@ -6,9 +6,17 @@
     xmlns:appStimmer="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
     xmlns:appstimmen="clr-namespace:MSO.StimmApp.Views.ContentViews.Appstimmen;assembly=MSO.StimmApp"
     Title="Appstimmen"
-    BackgroundColor="{Binding Source={x:Static appStimmer:App.Settings}, Path=AppColors.SecondaryColor}"
+    BackgroundColor="White"
     BindingContext="{Binding AppStimmer, Source={StaticResource Locator}}">
     <ContentPage.Content>
-        <appstimmen:AppStimmerCardView Padding="20" />
+        <Grid ColumnSpacing="0" RowSpacing="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="85*"></RowDefinition>
+                <RowDefinition Height="15*"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <appstimmen:AppStimmerCardView Grid.Row="0"></appstimmen:AppStimmerCardView>
+            <appstimmen:AppStimmerButtonsView Grid.Row="1" ></appstimmen:AppStimmerButtonsView>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
