--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
@@ -4,6 +4,8 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
+    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
+    xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView"
     BindingContext="{Binding AppStimmer, Source={StaticResource Locator}}">
     <ContentView.Content>
         <elements:SwipeCardView
@@ -12,17 +14,38 @@
             TopItem="{Binding CurrentAppStimmer}">
             <elements:SwipeCardView.ItemTemplate>
                 <DataTemplate x:Name="AppstimmerTemplate">
-                    <Grid>
+                    <Grid RowSpacing="0">
                         <Image
                             x:Name="AppStimmerPicture"
                             Aspect="AspectFill"
                             HorizontalOptions="Fill"
                             Source="{Binding Picture, Converter={StaticResource ImageSourceConverter}}"
                             VerticalOptions="Fill" />
-                        <Grid
-                            x:Name="OverlayBox"
-                            BackgroundColor="Transparent"
-                            InputTransparent="True" />
+                        <StackLayout
+                            Orientation="Horizontal"
+                            Spacing="0"
+                            VerticalOptions="StartAndExpand">
+                            <Image
+                                x:Name="LikeImage"
+                                Margin="20,35,0,0"
+                                Aspect="AspectFit"
+                                HeightRequest="80"
+                                Opacity="0.0"
+                                Rotation="-30"
+                                Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Images.like.png}"
+                                VerticalOptions="StartAndExpand"
+                                WidthRequest="150" />
+                            <Image
+                                x:Name="DislikeImage"
+                                Margin="0,35,20,0"
+                                Aspect="AspectFit"
+                                HeightRequest="80"
+                                Opacity="0.0"
+                                Rotation="30"
+                                Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Images.nope.png}"
+                                VerticalOptions="EndAndExpand"
+                                WidthRequest="150" />
+                        </StackLayout>
                     </Grid>
                 </DataTemplate>
             </elements:SwipeCardView.ItemTemplate>
