--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
@@ -15,7 +15,7 @@
                 <RowDefinition Height="20*" />
             </Grid.RowDefinitions>
 
-            <appstimmen:AppStimmerCardView Grid.Row="0" />
+            <appstimmen:AppStimmerCardView Grid.Row="0" Margin="15,15,15,0" />
             <appstimmen:AppStimmerButtonsView Grid.Row="1" />
         </Grid>
     </ContentPage.Content>
